# CBuild

./: .gitignore  LICENSE  README.md  pyproject.toml
src/CBuild/: __main__.py
src/cbuild/: __main__.py
