[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbuild"
version = "0.0.2"
authors = [
  { name="Alessandro Salerno" },
]
description = "A simple build system for C Projects"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alessandro-Salerno/CBuild"
"Bug Tracker" = "https://github.com/Alessandro-Salerno/CBuild/issues"
